SERVER-6556 handle strings containing null in agg